# placas-parqueadero

./: .gitignore  CMakeLists.txt  README.md  build.bat
docs/: Diagrama UML.md  despliegue-dos-pcs.md  especificacion.md  mac-mini.md  protocolo.md  vps-capadonna.md
docs/uml/: clases.puml  secuencia.puml
examples/winsock-hello/: README.md  client.cpp
include/: parking_core.h  socket_platform.h
python/: app.py  mock_server.py  parking_bridge.py  parking_pure.py  socket_listener.py
scripts/: build_mac.sh  deploy_linux.sh  deploy_vps.sh  run_mac_server.sh  run_server.sh  run_vps_server.sh  send_event.py  test_client.py
specs/: client.cpp  entrega proyecto parquedaero.docx  server.cpp
src/: generator_main.cpp  parking_core.cpp  socket_platform.cpp  socket_server.cpp
swig/: parking.i
